# pymodaq_plugins_physik_instrumente

./: .gitignore  README.rst  plugin_info.py  plugin_info.toml  pyproject.toml  setup.py
pymodaq_plugins_physik_instrumente/: version.py
pymodaq_plugins_physik_instrumente/daq_move_plugins/: daq_move_PI.py  daq_move_PI_MMC.py
pymodaq_plugins_physik_instrumente/hardware/PI/: mmc_wrapper.py
src/pymodaq_plugins_physik_instrumente/: __init__.py  utils.py
src/pymodaq_plugins_physik_instrumente/daq_move_plugins/: __init__.py  daq_move_PI.py  daq_move_PILegacy.py  daq_move_PI_E870.py  daq_move_PI_MMC.py  daq_move_PI_MMCLegacy.py
src/pymodaq_plugins_physik_instrumente/daq_viewer_plugins/plugins_0D/: daq_0Dviewer_Template.py
src/pymodaq_plugins_physik_instrumente/daq_viewer_plugins/plugins_1D/: daq_1Dviewer_Template.py
src/pymodaq_plugins_physik_instrumente/daq_viewer_plugins/plugins_2D/: daq_2Dviewer_Template.py
src/pymodaq_plugins_physik_instrumente/hardware/: pi_wrapper.py
src/pymodaq_plugins_physik_instrumente/hardware/PI/: base.py  mmc_wrapper.py  mmc_wrapper_client64.py  mmc_wrapper_server32.py
src/pymodaq_plugins_physik_instrumente/resources/: config_template.toml
tests/: test_plugin_package_structure.py
